--- a/gulp/app/scss/_css.scss
+++ b/gulp/app/scss/_css.scss
@@ -133,7 +133,9 @@ button a {
   /* для Chrome и Safari */
   transition: opacity ease-in 0.3s;
 }
-
+.social-mob {
+  display: none;
+}
 /* line 2, ../sass/_modules.scss */
 .social svg {
   max-width: 20px;
@@ -345,39 +347,19 @@ label input:focus {
   align-items: center;
   background-color: transparent;
   padding: 56px 0 50px;
-
-  @media (max-width: 1366px) {
-    padding: 20px 0;
-  }
-}
-/* line 34, ../sass/_layouts.scss */
-.start header > div {
-  margin: auto;
 }
 /* line 37, ../sass/_layouts.scss */
 .start header .social {
   width: 120px;
 }
-@media only screen and (min-width: 992px) {
-  /* line 49, ../sass/_layouts.scss */
-  .start header > div {
-    margin: 0;
-  }
-}
-/* line 61, ../sass/_layouts.scss */
 .start .mobile-menu {
-  position: fixed;
-  top: 75px;
-  right: 20px;
-  width: 25px;
-  z-index: 12;
+  display: none;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
 }
-@media only screen and (min-width: 992px) {
-  /* line 61, ../sass/_layouts.scss */
-  .start .mobile-menu {
-    display: none;
-  }
-}
+
 /* line 72, ../sass/_layouts.scss */
 .start .content {
   display: flex;
@@ -389,23 +371,6 @@ label input:focus {
 /* line 77, ../sass/_layouts.scss */
 .start #close-menu {
   display: none;
-}
-/* line 82, ../sass/_layouts.scss */
-.start .menu nav {
-  position: fixed;
-  display: inline-block;
-  width: auto;
-  height: 100%;
-  padding: 50px 50px 0 50px;
-  margin-top: 0;
-  top: 57px;
-  right: -203px;
-  z-index: 10;
-  -moz-transition: ease-in 0.3s;
-  /* для Firefox 15 */
-  -webkit-transition: ease-in 0.3s;
-  /* для Chrome и Safari */
-  transition: ease-in 0.3s;
 }
 /* line 97, ../sass/_layouts.scss */
 .start .menu nav ul {
@@ -421,6 +386,8 @@ label input:focus {
   color: inherit;
   text-decoration: none;
   transition: .15s;
+  font-size: 20px;
+  font-family: Oswald-Regular;
 }
 
 @media (hover: hover) {
@@ -428,12 +395,6 @@ label input:focus {
     color: #89D7D7;
   }
 }
-/* line 108, ../sass/_layouts.scss */
-.start .menu nav .nav-slider {
-  display: none;
-  margin: 0;
-}
-@media only screen and (min-width: 992px) {
   /* line 82, ../sass/_layouts.scss */
   .start .menu nav {
     position: static;
@@ -451,17 +412,6 @@ label input:focus {
     width: 50%;
     margin: 0;
   }
-  /* line 125, ../sass/_layouts.scss */
-  .start .menu nav .nav-slider {
-    display: block;
-  }
-}
-@media only screen and (min-width: 1600px) {
-  /* line 82, ../sass/_layouts.scss */
-  .start .menu nav {
-    padding-left: 0;
-  }
-}
 /* line 135, ../sass/_layouts.scss */
 .start .slider-content {
   display: flex;
@@ -492,7 +442,6 @@ label input:focus {
 .start .slider-content .slider-text {
   margin-bottom: 40px;
 }
-@media only screen and (min-width: 992px) {
   /* line 176, ../sass/_layouts.scss */
   .start .content .menu {
     padding: 90px 0 0;
@@ -506,8 +455,6 @@ label input:focus {
   .start .content .slider-content .slider-text {
     max-width: 480px;
   }
-}
-@media only screen and (min-width: 1200px) {
   /* line 205, ../sass/_layouts.scss */
   .start .content .slider-menu {
     flex-direction: row;
@@ -522,13 +469,10 @@ label input:focus {
     margin-top: -7px;
     margin-bottom: 30px;
   }
-}
-@media only screen and (min-width: 1600px) {
   /* line 230, ../sass/_layouts.scss */
   .start .content .slider-content .slider-text {
     margin-bottom: 30px;
   }
-}
 
 /* line 240, ../sass/_layouts.scss */
 .banners {
@@ -570,36 +514,15 @@ label input:focus {
     display: block;
   }
 }
-.start .logo {
-  position: fixed;
-  top: 65px;
-  left: 20px;
-  max-width: 70px;
-}
 .start .logo img {
   max-width: 100%;
 }
-@media only screen and (min-width: 992px) {
-  .start .logo {
-    position: static;
-    max-width: 100%;
-  }
-}
 .start .mobile-menu svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 25px;
-  fill: white;
-}
-.start .mobile-menu svg:last-child {
-  fill: black;
-}
-.start nav {
-  font-family: Oswald-Regular, sans-serif;
-  color: black;
-  font-size: 16px;
-  background-color: rgba(135, 215, 215, 0.9);
+  flex-shrink: 0;
+
+  & rect {
+    fill: #89D7D7;
+  }
 }
 .start nav li {
   list-style-type: none;
@@ -643,27 +566,9 @@ label input:focus {
   font-family: Oswald-Bold;
   margin-bottom: 30px;
 }
-@media only screen and (max-width: 1366px) {
-  .start .slider-content .slider-title {
-    font-size: 54px;
-    letter-spacing: 1px;
-    line-height: 64px;
-    font-family: Oswald-Bold;
-    margin-bottom: 20px;
-  }
-  .slider-title-small {
-    margin: 0 0 20px;
-  }
-  .start .slider-content .slider-text {
-    margin-bottom: 20px;
-    margin-top: 0;
-  }
-}
-@media only screen and (min-width: 1600px) {
-  .start .slider-content .slider-title {
-    font-size: 64px;
-    line-height: 66px;
-  }
+.start .slider-content .slider-title {
+  font-size: 64px;
+  line-height: 66px;
 }
 .start .slider-content .slider-text {
   font-family: Montserrat-Light;
@@ -675,16 +580,6 @@ label input:focus {
 }
 .start .slider-content .slider-menu p {
   font-size: 1.2em;
-}
-@media only screen and (min-width: 480px) {
-  .start .slider-content .slider-menu p {
-    font-size: 1.4em;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .start .slider-content {
-    font-size: 1.1em;
-  }
 }
 
 .onepage-pagination li a::before {
@@ -800,7 +695,7 @@ label input:focus {
 }
 /* line 352, ../sass/_layouts.scss */
 .team .team-info {
-  background-color: #000;
+  background: rgba(0,0,0,0.8);
   color: #fff;
   padding: 45px 40px 50px;
 }
@@ -829,7 +724,6 @@ label input:focus {
 .team .team-info .title-des {
   margin-bottom: 50px;
 }
-@media screen and (min-width: 768px) {
   .team .team-statistic {
     max-width: 500px;
   }
@@ -838,8 +732,6 @@ label input:focus {
     justify-content: space-between;
     align-items: baseline;
   }
-}
-@media screen and (min-width: 992px) {
   .team .team-info > *:not(.m-team-photo) {
     padding: 0 20px 0 20px;
   }
@@ -851,15 +743,12 @@ label input:focus {
     background: -webkit-linear-gradient(left, #7dd7d7 50%, transparent 50%);
     background: linear-gradient(to right, #7dd7d7 50%, transparent 50%);
   }
-}
-@media screen and (min-width: 1200px) {
   .team .m-team-photo {
     display: none;
   }
   .team .team-info > *:not(.m-team-photo) {
     max-width: 630px;
   }
-}
 @media screen and (min-width: 1600px) {
   .team .team-info .title-team {
     margin-bottom: 40px;
@@ -944,11 +833,7 @@ label input:focus {
 ====================*/
 .cost {
   flex-direction: column;
-  padding: 50px 0;
-
-  @media (max-width: 1366px) {
-    padding: 20px 0;
-  }
+  padding: 50px 40px 50px 20px;
 
   &__inner {
     display: flex;
@@ -987,14 +872,12 @@ label input:focus {
 .cost .flex-box {
   flex-direction: column;
 }
-@media screen and (min-width: 768px) {
-  .cost .flex-box {
-    flex-direction: row;
-    align-items: center;
-  }
-  .cost .flex-box > div {
-    width: 50%;
-  }
+.cost .flex-box {
+  flex-direction: row;
+  align-items: center;
+}
+.cost .flex-box > div {
+  width: 50%;
 }
 /*====================
         COACH
@@ -1036,15 +919,14 @@ label input:focus {
   max-width: 100%;
   height: auto;
 }
-@media screen and (max-width: 992px) {
-  .directions-coach .flex-box {
-    flex-direction: column;
-  }
-  .directions-coach .trainer-description {
-    margin-top: 20px;
-  }
-}
-@media screen and (min-width: 1200px) {
+//@media screen and (max-width: 992px) {
+//  .directions-coach .flex-box {
+//    flex-direction: column;
+//  }
+//  .directions-coach .trainer-description {
+//    margin-top: 20px;
+//  }
+//}
   .directions-coach .content .flex-box {
     align-items: flex-start;
   }
@@ -1054,33 +936,26 @@ label input:focus {
   .directions-coach .coach2 .trainer-description > div {
     text-align: right;
   }
-}
-@media screen and (min-width: 1360px) {
-  .directions-coach .trainer-photo {
-    width: 45%;
-  }
-}
-@media screen and (min-width: 1600px) {
+  //.directions-coach .trainer-photo {
+  //  width: 45%;
+  //}
   .directions-coach .name-block {
     margin-bottom: 125px;
   }
   .directions-coach .trainer-text {
     margin-bottom: 100px;
   }
-  .directions-coach .trainer-photo {
-    width: 55%;
-  }
+  //.directions-coach .trainer-photo {
+  //  width: 55%;
+  //}
   .directions-coach .coach1 .trainer-photo {
     margin-left: -25%;
   }
   .directions-coach .coach2 .trainer-photo {
     margin-right: -25%;
   }
-}
-@media screen and (min-width: 1800px) {
   .directions-coach .trainer-photo {
     width: 60%;
-  }
 }
 
 /*====================
@@ -1416,15 +1291,11 @@ label input:focus {
 ====================*/
 .directions {
   flex-direction: column;
-  background-image: url("../img/dir-triathlon.jpg"), url("../img/dir-run.jpg");
+  background: url("../img/dir-triathlon.jpg"), url("../img/dir-run.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   color: #fff;
-  padding: 50px 0;
-
-  @media (max-width: 1366px) {
-    padding: 20px 0;
-  }
+  padding: 50px 40px 50px 20px;
 
   &__inner {
     display: flex;
@@ -1788,10 +1659,6 @@ label input:focus {
   color: #fff;
   flex-direction: column;
   padding: 40px 0;
-
-  @media (max-width: 1366px) {
-    padding: 20px 0;
-  }
 
   &__inner {
     display: flex;
